--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -9,7 +9,15 @@ description: |
 grade: stable
 confinement: strict
 
-architectures: [amd64]
+architectures:
+  - build-on: amd64
+    run-on: amd64
+  - build-on: i386
+    run-on: i386
+  - build-on: armhf
+    run-on: armhf
+  - build-on: arm64
+    run-on: arm64
 
 base: core18
 
