--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,10 +1,11 @@
 name: eiskaltdcpp
 version: git
-summary: EiskaltDC++ with GUI based on Qt
+summary: file sharing program using DC and ADC protocols
 description: |
-  EiskaltDC++ is a cross-platform program that uses the Direct Connect and ADC
-  protocols. It is compatible with DC++, FlylinkDC++, LinuxDC++ and other DC
-  clients. EiskaltDC++ also interoperates with all common DC hub software.
+  EiskaltDC++ is a cross-platform program that uses the Direct Connect and
+  Advanced Direct Connect protocols. It is compatible with DC++, AirDC++,
+  FlylinkDC++ and other DC clients. EiskaltDC++ also interoperates with all
+  common DC hub software.
 
 grade: stable
 confinement: strict
