--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: eiskaltdcpp
 version: git
-summary: file sharing program using DC and ADC protocols
+summary: file sharing program using Direct Connect protocols
 description: |
   EiskaltDC++ is a cross-platform program that uses the Direct Connect and
   Advanced Direct Connect protocols. It is compatible with DC++, AirDC++,
