Build with xattr support
+ Replace build dependency from Lua 5.1 to 5.2

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -60,7 +60,8 @@ parts:
     #source: .
     source: https://github.com/eiskaltdcpp/eiskaltdcpp.git
     build-packages:
-      - liblua5.1-dev
+      - libattr1-dev
+      - liblua5.2-dev
       - libpcre3-dev
       - libbz2-dev
       - zlib1g-dev
@@ -75,15 +76,16 @@ parts:
     configflags:
       - -DCMAKE_INSTALL_PREFIX=/usr
       - -DFORCE_XDG=OFF # use $HOME for configs, which we map to $SNAP_USER_COMMON
-      - -DWITH_LUASCRIPTS=ON
       - -DLINK=STATIC
+      - -DUSE_XATTR=ON
+      - -DWITH_LUASCRIPTS=ON
     stage-packages:
       - libqt5concurrent5
       - libqt5sql5
       - libqt5sql5-sqlite
       - libqt5xml5
       - libaspell15
-      - liblua5.1-0
+      - liblua5.2-0
       - libpcrecpp0v5
       - libpulse0
       - miniupnpc
