Switch to Ubuntu Focal (20.04) base
+ Add support of riscv64 architecture
- Remove support of i386 architecture

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -13,14 +13,14 @@ confinement: strict
 architectures:
   - build-on: amd64
     run-on: amd64
-  - build-on: i386
-    run-on: i386
-  - build-on: armhf
-    run-on: armhf
   - build-on: arm64
     run-on: arm64
+  - build-on: armhf
+    run-on: armhf
+  - build-on: riscv64
+    run-on: riscv64
 
-base: core18
+base: core20
 
 version-script: |
   set -x
